# protoplast-ml-example

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
docs/: index.md  modules.md
notebooks/: classification_checkpoint.ipynb  classification_examples.ipynb  example.py  pca_plate3.ipynb  pca_subset.ipynb  perturbation_examples.ipynb  protoplast_vcc.ipynb  simple_classifier_example.ipynb  sims.py  split_data_check.ipynb
